# popqc

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/popqc-cli/: Cargo.toml
crates/popqc-cli/src/: main.rs
crates/popqc-cli/tests/: test_data.rs
crates/popqc-cli/tests/fixtures/test_data/multiqc_data/: multiqc_picard_dups.txt  multiqc_rseqc_read_distribution.txt  multiqc_star.txt
crates/popqc-core/: Cargo.toml
crates/popqc-core/src/: config.rs  error.rs  lib.rs  metrics.rs  model.rs  normalize.rs  outlier.rs  traits.rs
crates/popqc-discovery/: Cargo.toml
crates/popqc-discovery/src/: lib.rs
crates/popqc-parsers/: Cargo.toml
crates/popqc-parsers/src/: lib.rs  multiqc_table.rs  registry.rs  star.rs
crates/popqc-report/: Cargo.toml
crates/popqc-report/src/: html.rs  lib.rs
docs/: contribution.md  user_guide.md
sample_report/: test_popqc_report.html
tests/fixtures/test_data/: metadata.tsv
tests/fixtures/test_data/multiqc_data/: multiqc_fastqc.txt  multiqc_general_stats.txt  multiqc_rseqc_infer_experiment.txt  multiqc_rseqc_tin.txt  multiqc_samtools_flagstat.txt
tests/integration/: test_data.rs
